--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "3.5.94" !default;
+$mdi-version:          "3.5.95" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -2483,6 +2483,7 @@ $mdi-icons: (
     "page-previous-outline": FB8F,
     "palette": F3D8,
     "palette-advanced": F3D9,
+    "palette-outline": FDE8,
     "palette-swatch": F8B4,
     "pan": FB90,
     "pan-bottom-left": FB91,
