--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "3.5.95" !default;
+$mdi-version:          "3.6.95" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -21,6 +21,8 @@ $mdi-icons: (
     "account-badge": FD83,
     "account-badge-alert": FD84,
     "account-badge-alert-outline": FD85,
+    "account-badge-horizontal": FDF0,
+    "account-badge-horizontal-outline": FDF1,
     "account-badge-outline": FD86,
     "account-box": F006,
     "account-box-multiple": F933,
@@ -402,6 +404,7 @@ $mdi-icons: (
     "auto-upload": F069,
     "autorenew": F06A,
     "av-timer": F06B,
+    "aws": FDF2,
     "axe": F8C7,
     "axis": FD24,
     "axis-arrow": FD25,
@@ -429,6 +432,10 @@ $mdi-icons: (
     "backspace-outline": FB38,
     "backup-restore": F06F,
     "badminton": F850,
+    "bag-personal": FDF3,
+    "bag-personal-off": FDF4,
+    "bag-personal-off-outline": FDF5,
+    "bag-personal-outline": FDF6,
     "balloon": FA25,
     "ballot": F9C8,
     "ballot-outline": F9C9,
@@ -536,6 +543,7 @@ $mdi-icons: (
     "bell-sleep-outline": FA92,
     "beta": F0A1,
     "betamax": F9CA,
+    "biathlon": FDF7,
     "bible": F0A2,
     "bike": F0A3,
     "billiards": FB3D,
@@ -590,6 +598,8 @@ $mdi-icons: (
     "bookmark-check": F0C1,
     "bookmark-minus": F9CB,
     "bookmark-minus-outline": F9CC,
+    "bookmark-multiple": FDF8,
+    "bookmark-multiple-outline": FDF9,
     "bookmark-music": F0C2,
     "bookmark-off": F9CD,
     "bookmark-off-outline": F9CE,
@@ -701,6 +711,8 @@ $mdi-icons: (
     "calendar-heart": F9D1,
     "calendar-import": FB0A,
     "calendar-minus": FD38,
+    "calendar-month": FDFA,
+    "calendar-month-outline": FDFB,
     "calendar-multiple": F0F1,
     "calendar-multiple-check": F0F2,
     "calendar-multiselect": FA31,
@@ -747,6 +759,8 @@ $mdi-icons: (
     "camera-party-mode": F105,
     "camera-rear": F106,
     "camera-rear-variant": F107,
+    "camera-retake": FDFC,
+    "camera-retake-outline": FDFD,
     "camera-switch": F108,
     "camera-timer": F109,
     "camera-wireless": FD92,
@@ -757,6 +771,7 @@ $mdi-icons: (
     "cannabis": F7A5,
     "caps-lock": FA9A,
     "car": F10B,
+    "car-back": FDFE,
     "car-battery": F10C,
     "car-brake-abs": FC23,
     "car-brake-alert": FC24,
@@ -778,6 +793,7 @@ $mdi-icons: (
     "car-light-high": FC28,
     "car-limousine": F8CC,
     "car-multiple": FB4A,
+    "car-off": FDFF,
     "car-parking-lights": FD3F,
     "car-pickup": F7A9,
     "car-side": F7AA,
@@ -826,6 +842,7 @@ $mdi-icons: (
     "cassette": F9D3,
     "cast": F118,
     "cast-connected": F119,
+    "cast-education": FE6D,
     "cast-off": F789,
     "castle": F11A,
     "cat": F11B,
@@ -876,6 +893,7 @@ $mdi-icons: (
     "chat-processing": FB57,
     "check": F12C,
     "check-all": F12D,
+    "check-bold": FE6E,
     "check-box-multiple-outline": FC2D,
     "check-box-outline": FC2E,
     "check-circle": F5E0,
@@ -884,6 +902,9 @@ $mdi-icons: (
     "check-network": FC2F,
     "check-network-outline": FC30,
     "check-outline": F854,
+    "check-underline": FE70,
+    "check-underline-circle": FE71,
+    "check-underline-circle-outline": FE72,
     "checkbook": FA9C,
     "checkbox-blank": F12E,
     "checkbox-blank-circle": F12F,
@@ -959,6 +980,7 @@ $mdi-icons: (
     "circle-slice-7": FAA3,
     "circle-slice-8": FAA4,
     "circle-small": F9DE,
+    "circular-saw": FE73,
     "cisco-webex": F145,
     "city": F146,
     "city-variant": FA35,
@@ -1058,6 +1080,11 @@ $mdi-icons: (
     "collapse-all": FAA5,
     "collapse-all-outline": FAA6,
     "color-helper": F179,
+    "comma": FE74,
+    "comma-box": FE75,
+    "comma-box-outline": FE76,
+    "comma-circle": FE77,
+    "comma-circle-outline": FE78,
     "comment": F17A,
     "comment-account": F17B,
     "comment-account-outline": F17C,
@@ -1111,6 +1138,8 @@ $mdi-icons: (
     "content-save-all": F194,
     "content-save-edit": FCD7,
     "content-save-edit-outline": FCD8,
+    "content-save-move": FE79,
+    "content-save-move-outline": FE7A,
     "content-save-outline": F817,
     "content-save-settings": F61B,
     "content-save-settings-outline": FB13,
@@ -1456,6 +1485,7 @@ $mdi-icons: (
     "file-cancel-outline": FDA3,
     "file-chart": F215,
     "file-check": F216,
+    "file-check-outline": FE7B,
     "file-cloud": F217,
     "file-compare": F8A9,
     "file-delimited": F218,
@@ -1483,9 +1513,11 @@ $mdi-icons: (
     "file-move": FAB8,
     "file-multiple": F222,
     "file-music": F223,
+    "file-music-outline": FE7C,
     "file-outline": F224,
     "file-pdf": F225,
     "file-pdf-box": F226,
+    "file-pdf-outline": FE7D,
     "file-percent": F81D,
     "file-plus": F751,
     "file-powerpoint": F227,
@@ -1506,6 +1538,7 @@ $mdi-icons: (
     "file-upload": FA4C,
     "file-upload-outline": FA4D,
     "file-video": F22B,
+    "file-video-outline": FE10,
     "file-word": F22C,
     "file-word-box": F22D,
     "file-xml": F22E,
@@ -1524,6 +1557,9 @@ $mdi-icons: (
     "fire-truck": F8AA,
     "firebase": F966,
     "firefox": F239,
+    "fireplace": FE11,
+    "fireplace-off": FE12,
+    "firework": FE13,
     "fish": F23A,
     "flag": F23B,
     "flag-checkered": F23C,
@@ -1625,6 +1661,7 @@ $mdi-icons: (
     "format-bold": F264,
     "format-clear": F265,
     "format-color-fill": F266,
+    "format-color-highlight": FE14,
     "format-color-text": F69D,
     "format-columns": F8DE,
     "format-float-center": F267,
@@ -1679,6 +1716,7 @@ $mdi-icons: (
     "format-text": F284,
     "format-text-rotation-down": FD4F,
     "format-text-rotation-none": FD50,
+    "format-text-variant": FE15,
     "format-text-wrapping-clip": FCEA,
     "format-text-wrapping-overflow": FCEB,
     "format-text-wrapping-wrap": FCEC,
@@ -1715,6 +1753,22 @@ $mdi-icons: (
     "fuse": FC61,
     "fuse-blade": FC62,
     "gamepad": F296,
+    "gamepad-circle": FE16,
+    "gamepad-circle-down": FE17,
+    "gamepad-circle-left": FE18,
+    "gamepad-circle-outline": FE19,
+    "gamepad-circle-right": FE1A,
+    "gamepad-circle-up": FE1B,
+    "gamepad-down": FE1C,
+    "gamepad-left": FE1D,
+    "gamepad-right": FE1E,
+    "gamepad-round": FE1F,
+    "gamepad-round-down": FE20,
+    "gamepad-round-left": FE21,
+    "gamepad-round-outline": FE22,
+    "gamepad-round-right": FE23,
+    "gamepad-round-up": FE24,
+    "gamepad-up": FE25,
     "gamepad-variant": F297,
     "gantry-crane": FDAD,
     "garage": F6D8,
@@ -1730,6 +1784,7 @@ $mdi-icons: (
     "gate-or": F8E4,
     "gate-xnor": F8E5,
     "gate-xor": F8E6,
+    "gatsby": FE26,
     "gauge": F29A,
     "gauge-empty": F872,
     "gauge-full": F873,
@@ -1758,7 +1813,8 @@ $mdi-icons: (
     "ghost": F2A0,
     "ghost-off": F9F4,
     "gif": FD54,
-    "gift": F2A1,
+    "gift": FE27,
+    "gift-outline": F2A1,
     "git": F2A2,
     "github-box": F2A3,
     "github-circle": F2A4,
@@ -1825,6 +1881,7 @@ $mdi-icons: (
     "grid": F2C1,
     "grid-large": F757,
     "grid-off": F2C2,
+    "grill": FE28,
     "group": F2C3,
     "guitar-acoustic": F770,
     "guitar-electric": F2C4,
@@ -1837,6 +1894,7 @@ $mdi-icons: (
     "hamburger": F684,
     "hammer": F8E9,
     "hand": FA4E,
+    "hand-left": FE29,
     "hand-okay": FA4F,
     "hand-peace": FA50,
     "hand-peace-variant": FA51,
@@ -1844,6 +1902,8 @@ $mdi-icons: (
     "hand-pointing-left": FA53,
     "hand-pointing-right": F2C7,
     "hand-pointing-up": FA54,
+    "hand-right": FE2A,
+    "hand-saw": FE2B,
     "hanger": F2C8,
     "hard-hat": F96E,
     "harddisk": F2CA,
@@ -1980,6 +2040,7 @@ $mdi-icons: (
     "image-filter-none": F2F6,
     "image-filter-tilt-shift": F2F7,
     "image-filter-vintage": F2F8,
+    "image-frame": FE2C,
     "image-move": F9F7,
     "image-multiple": F2F9,
     "image-off": F82A,
@@ -2005,6 +2066,7 @@ $mdi-icons: (
     "instapaper": F2FF,
     "internet-explorer": F300,
     "invert-colors": F301,
+    "invert-colors-off": FE2D,
     "ip": FA5E,
     "ip-network": FA5F,
     "ip-network-outline": FC6C,
@@ -2034,6 +2096,7 @@ $mdi-icons: (
     "keyboard-caps": F30E,
     "keyboard-close": F30F,
     "keyboard-off": F310,
+    "keyboard-off-outline": FE2E,
     "keyboard-outline": F97A,
     "keyboard-return": F311,
     "keyboard-settings": F9F8,
@@ -2085,9 +2148,12 @@ $mdi-icons: (
     "launch": F327,
     "lava-lamp": F7D4,
     "layers": F328,
+    "layers-minus": FE2F,
     "layers-off": F329,
     "layers-off-outline": F9FC,
     "layers-outline": F9FD,
+    "layers-plus": FE30,
+    "layers-remove": FE31,
     "lead-pencil": F64F,
     "leaf": F32A,
     "leaf-maple": FC6F,
@@ -2112,6 +2178,8 @@ $mdi-icons: (
     "lifebuoy": F87D,
     "light-switch": F97D,
     "lightbulb": F335,
+    "lightbulb-off": FE32,
+    "lightbulb-off-outline": FE33,
     "lightbulb-on": F6E7,
     "lightbulb-on-outline": F6E8,
     "lightbulb-outline": F336,
@@ -2284,6 +2352,7 @@ $mdi-icons: (
     "monitor-lock": FDB7,
     "monitor-multiple": F37A,
     "monitor-off": FD6C,
+    "monitor-screenshot": FE34,
     "monitor-star": FDB8,
     "more": F37B,
     "mother-nurse": FCFD,
@@ -2347,8 +2416,11 @@ $mdi-icons: (
     "new-box": F394,
     "newspaper": F395,
     "nfc": F396,
+    "nfc-off": FE35,
+    "nfc-search-variant": FE36,
     "nfc-tap": F397,
     "nfc-variant": F398,
+    "nfc-variant-off": FE37,
     "ninja": F773,
     "nintendo-switch": F7E0,
     "nodejs": F399,
@@ -2362,6 +2434,7 @@ $mdi-icons: (
     "note-plus-outline": F39D,
     "note-text": F39E,
     "notebook": F82D,
+    "notebook-multiple": FE38,
     "notification-clear-all": F39F,
     "npm": F6F6,
     "npm-variant": F98E,
@@ -2483,7 +2556,7 @@ $mdi-icons: (
     "page-previous-outline": FB8F,
     "palette": F3D8,
     "palette-advanced": F3D9,
-    "palette-outline": FDE8,
+    "palette-outline": FE6C,
     "palette-swatch": F8B4,
     "pan": FB90,
     "pan-bottom-left": FB91,
@@ -2519,6 +2592,7 @@ $mdi-icons: (
     "paw": F3E9,
     "paw-off": F657,
     "paypal": F882,
+    "pdf-box": FE39,
     "peace": F883,
     "pen": F3EA,
     "pen-lock": FDBE,
@@ -2577,6 +2651,10 @@ $mdi-icons: (
     "pi-hole": FDCD,
     "piano": F67C,
     "pickaxe": F8B6,
+    "picture-in-picture-bottom-right": FE3A,
+    "picture-in-picture-bottom-right-outline": FE3B,
+    "picture-in-picture-top-right": FE3C,
+    "picture-in-picture-top-right-outline": FE3D,
     "pier": F886,
     "pier-crane": F887,
     "pig": F401,
@@ -2672,7 +2750,10 @@ $mdi-icons: (
     "presentation-play": F429,
     "printer": F42A,
     "printer-3d": F42B,
+    "printer-3d-nozzle": FE3E,
+    "printer-3d-nozzle-outline": FE3F,
     "printer-alert": F42C,
+    "printer-off": FE40,
     "printer-settings": F706,
     "printer-wireless": FA0A,
     "priority-high": F603,
@@ -2732,6 +2813,8 @@ $mdi-icons: (
     "record": F44A,
     "record-player": F999,
     "record-rec": F44B,
+    "rectangle": FE41,
+    "rectangle-outline": FE42,
     "recycle": F44C,
     "reddit": F44D,
     "redo": F44E,
@@ -2776,6 +2859,7 @@ $mdi-icons: (
     "ribbon": F460,
     "rice": F7E9,
     "ring": F7EA,
+    "rivet": FE43,
     "road": F461,
     "road-variant": F462,
     "robot": F6A8,
@@ -2818,6 +2902,7 @@ $mdi-icons: (
     "satellite-uplink": F908,
     "satellite-variant": F471,
     "sausage": F8B9,
+    "saw-blade": FE44,
     "saxophone": F609,
     "scale": F472,
     "scale-balance": F5D1,
@@ -2829,10 +2914,10 @@ $mdi-icons: (
     "screen-rotation": F475,
     "screen-rotation-lock": F476,
     "screw-flat-top": FDCF,
-    "screw-lag": FDD0,
-    "screw-machine-flat-top": FDD1,
-    "screw-machine-round-top": FDD2,
-    "screw-round-top": FDD3,
+    "screw-lag": FE54,
+    "screw-machine-flat-top": FE55,
+    "screw-machine-round-top": FE56,
+    "screw-round-top": FE57,
     "screwdriver": F477,
     "script": FB9D,
     "script-outline": F478,
@@ -2854,6 +2939,8 @@ $mdi-icons: (
     "seatbelt": FCA1,
     "security": F483,
     "security-network": F484,
+    "seed": FE45,
+    "seed-outline": FE46,
     "select": F485,
     "select-all": F486,
     "select-color": FD0D,
@@ -2866,8 +2953,8 @@ $mdi-icons: (
     "selection-ellipse": FD0E,
     "selection-off": F776,
     "send": F48A,
-    "send-circle": FDD4,
-    "send-circle-outline": FDD5,
+    "send-circle": FE58,
+    "send-circle-outline": FE59,
     "send-lock": F7EC,
     "serial-port": F65C,
     "server": F48B,
@@ -2931,7 +3018,7 @@ $mdi-icons: (
     "ship-wheel": F832,
     "shoe-formal": FB22,
     "shoe-heel": FB23,
-    "shoe-print": FDD6,
+    "shoe-print": FE5A,
     "shopify": FADD,
     "shopping": F49A,
     "shopping-music": F49B,
@@ -2957,14 +3044,15 @@ $mdi-icons: (
     "signal-cellular-2": F8BC,
     "signal-cellular-3": F8BD,
     "signal-cellular-outline": F8BE,
+    "signal-distance-variant": FE47,
     "signal-hspa": F714,
     "signal-hspa-plus": F715,
     "signal-off": F782,
     "signal-variant": F60A,
-    "signature": FDD7,
-    "signature-freehand": FDD8,
-    "signature-image": FDD9,
-    "signature-text": FDDA,
+    "signature": FE5B,
+    "signature-freehand": FE5C,
+    "signature-image": FE5D,
+    "signature-text": FE5E,
     "silo": FB24,
     "silverware": F4A3,
     "silverware-fork": F4A4,
@@ -2997,8 +3085,8 @@ $mdi-icons: (
     "slackware": F90A,
     "sleep": F4B2,
     "sleep-off": F4B3,
-    "slope-downhill": FDDB,
-    "slope-uphill": FDDC,
+    "slope-downhill": FE5F,
+    "slope-uphill": FE60,
     "smog": FA70,
     "smoke-detector": F392,
     "smoking": F4B4,
@@ -3039,6 +3127,7 @@ $mdi-icons: (
     "spa": FCAD,
     "spa-outline": FCAE,
     "space-invaders": FBA5,
+    "spade": FE48,
     "speaker": F4C3,
     "speaker-bluetooth": F9A1,
     "speaker-multiple": FD14,
@@ -3052,6 +3141,8 @@ $mdi-icons: (
     "spotlight-beam": F4C9,
     "spray": F665,
     "spray-bottle": FADF,
+    "sprout": FE49,
+    "sprout-outline": FE4A,
     "square": F763,
     "square-edit-outline": F90B,
     "square-inc": F4CA,
@@ -3156,6 +3247,7 @@ $mdi-icons: (
     "table-row-remove": F4F5,
     "table-search": F90E,
     "table-settings": F837,
+    "table-tennis": FE4B,
     "tablet": F4F6,
     "tablet-android": F4F7,
     "tablet-cellphone": F9A6,
@@ -3211,12 +3303,12 @@ $mdi-icons: (
     "theater": F50D,
     "theme-light-dark": F50E,
     "thermometer": F50F,
-    "thermometer-alert": FDDD,
-    "thermometer-chevron-down": FDDE,
-    "thermometer-chevron-up": FDDF,
+    "thermometer-alert": FE61,
+    "thermometer-chevron-down": FE62,
+    "thermometer-chevron-up": FE63,
     "thermometer-lines": F510,
-    "thermometer-minus": FDE0,
-    "thermometer-plus": FDE1,
+    "thermometer-minus": FE64,
+    "thermometer-plus": FE65,
     "thermostat": F393,
     "thermostat-box": F890,
     "thought-bubble": F7F5,
@@ -3294,12 +3386,13 @@ $mdi-icons: (
     "transition": F914,
     "transition-masked": F915,
     "translate": F5CA,
-    "translate-off": FDE2,
+    "translate-off": FE66,
     "transmission-tower": FD1A,
     "trash-can": FA78,
     "trash-can-outline": FA79,
     "treasure-chest": F725,
     "tree": F531,
+    "tree-outline": FE4C,
     "trello": F532,
     "trending-down": F533,
     "trending-neutral": F534,
@@ -3360,7 +3453,7 @@ $mdi-icons: (
     "upload-multiple": F83C,
     "upload-network": F6F5,
     "upload-network-outline": FCB4,
-    "upload-outline": FDE3,
+    "upload-outline": FE67,
     "usb": F553,
     "van-passenger": F7F9,
     "van-utility": F7FA,
@@ -3413,6 +3506,9 @@ $mdi-icons: (
     "view-array": F56B,
     "view-carousel": F56C,
     "view-column": F56D,
+    "view-comfy": FE4D,
+    "view-compact": FE4E,
+    "view-compact-outline": FE4F,
     "view-dashboard": F56E,
     "view-dashboard-outline": FA1C,
     "view-dashboard-variant": F842,
@@ -3447,11 +3543,12 @@ $mdi-icons: (
     "volume-mute": F75E,
     "volume-off": F581,
     "volume-plus": F75C,
-    "volume-variant-off": FDE4,
+    "volume-variant-off": FE68,
     "vote": FA1E,
     "vote-outline": FA1F,
     "vpn": F582,
     "vuejs": F843,
+    "vuetify": FE50,
     "walk": F583,
     "wall": F7FD,
     "wall-sconce": F91B,
@@ -3462,7 +3559,7 @@ $mdi-icons: (
     "wallet-membership": F586,
     "wallet-outline": FBB9,
     "wallet-travel": F587,
-    "wallpaper": FDE5,
+    "wallpaper": FE69,
     "wan": F588,
     "washing-machine": F729,
     "watch": F589,
@@ -3475,13 +3572,14 @@ $mdi-icons: (
     "watch-vibrate-off": FCB6,
     "water": F58C,
     "water-off": F58D,
-    "water-outline": FDE6,
+    "water-outline": FE6A,
     "water-percent": F58E,
     "water-pump": F58F,
     "watermark": F612,
     "waves": F78C,
     "waze": FBBA,
     "weather-cloudy": F590,
+    "weather-cloudy-arrow-right": FE51,
     "weather-fog": F591,
     "weather-hail": F592,
     "weather-hurricane": F897,
@@ -3518,7 +3616,7 @@ $mdi-icons: (
     "widgets": F72B,
     "wifi": F5A9,
     "wifi-off": F5AA,
-    "wifi-star": FDE7,
+    "wifi-star": FE6B,
     "wifi-strength-1": F91E,
     "wifi-strength-1-alert": F91F,
     "wifi-strength-1-lock": F920,
@@ -3569,7 +3667,9 @@ $mdi-icons: (
     "xbox-controller-battery-low": F74D,
     "xbox-controller-battery-medium": F74E,
     "xbox-controller-battery-unknown": F74F,
+    "xbox-controller-menu": FE52,
     "xbox-controller-off": F5BB,
+    "xbox-controller-view": FE53,
     "xda": F5BC,
     "xing": F5BD,
     "xing-box": F5BE,
